--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,118 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "img/Logo-Icon.svg",
+        "config": {
+          "originalSize": 56047,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/UX-icon.svg",
+        "config": {
+          "originalSize": 1350,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/arrow-right-up.svg",
+        "config": {
+          "originalSize": 561,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/client.png",
+        "config": {
+          "originalSize": 567941
+        }
+      },
+      {
+        "file": "img/dev-Icon.svg",
+        "config": {
+          "originalSize": 1396,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/graphic-icon.svg",
+        "config": {
+          "originalSize": 1392,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/motion-icon.svg",
+        "config": {
+          "originalSize": 1462,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/photography-icon.svg",
+        "config": {
+          "originalSize": 1421,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/vector1.svg",
+        "config": {
+          "originalSize": 251,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/vector2.svg",
+        "config": {
+          "originalSize": 390,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/vector3.svg",
+        "config": {
+          "originalSize": 278,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/vector4.svg",
+        "config": {
+          "originalSize": 595,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/videography-icon.svg",
+        "config": {
+          "originalSize": 1490,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/work-example1.svg",
+        "config": {
+          "originalSize": 2533209,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/work-example2.svg",
+        "config": {
+          "originalSize": 1823361,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/work-example3.svg",
+        "config": {
+          "originalSize": 1637600,
+          "optimized": true
+        }
+      }
+    ]
   }
 }
